:construction: Prepare to save.

--- a/app/design/frontend/base/default/template/paymentmodule/form/partial/creditcard.phtml
+++ b/app/design/frontend/base/default/template/paymentmodule/form/partial/creditcard.phtml
@@ -163,7 +163,7 @@
         <input
                 type="checkbox"
                 id="<?php echo "$elementId"?>_mundicheckout-save-credit-card"
-                name="<?php echo "$elementId"?>_save-credit-card"
+                name="payment[<?php echo "$elementId"?>_save-credit-card]"
         >
         <label for="<?php echo "$elementId"?>_mundicheckout-save-credit-card">Salvar este cartão para compras futuras</label>
         <br>
