--- a/app/design/frontend/base/default/layout/paymentmodule.xml
+++ b/app/design/frontend/base/default/layout/paymentmodule.xml
@@ -51,6 +51,8 @@
         </reference>
     </checkout_onepage_success>
 
+
+    <!-- CreditCard Wallet  ################################################ -->
     <creditcard_wallet_menu_item_handle translate="label">
         <reference name="customer_account_navigation">
             <action method="addLink" translate="label" module="paymentmodule">
@@ -61,4 +63,16 @@
         </reference>
     </creditcard_wallet_menu_item_handle>
 
+    <paymentmodule_wallet_index translate="label">
+        <label>My Cards</label>
+        <update handle="customer_account"/>
+        <reference name="my.account.wrapper">
+            <block
+                    type="paymentmodule/customer_account_wallet"
+                    name="customer_account_wallet"
+            />
+        </reference>
+    </paymentmodule_wallet_index>
+
+    <!-- ################################################################### -->
 </layout>
