--- a/app/design/frontend/base/default/template/paymentmodule/customer/account/wallet.phtml
+++ b/app/design/frontend/base/default/template/paymentmodule/customer/account/wallet.phtml
@@ -6,14 +6,14 @@
     <form>
         <div class="fieldset">
             <?php if ($this->hasSavedCards()) : ?>
-                <table class="clean-table linearize-table" id="savedcreditcard-table">
+                <table class="data-table" id="savedcreditcard-table">
                     <thead>
-                        <tr class="first last">
-                            <td>#</td>
-                            <td>Brand</td>
-                            <td>Last Four Digits</td>
-                            <td>Expiration Date</td>
-                            <td></td>
+                        <tr>
+                            <th>#</th>
+                            <th>Brand</th>
+                            <th>Last Four Digits</th>
+                            <th>Expiration Date</th>
+                            <th></th>
                         </tr>
                     </thead>
                     <tbody>
