:globe_with_meridians: added i18n structure; add minimal translations

--- a/app/design/frontend/base/default/template/paymentmodule/checkout/information.phtml
+++ b/app/design/frontend/base/default/template/paymentmodule/checkout/information.phtml
@@ -2,8 +2,14 @@
 <br />
 <?php if(!empty($billetData)) : ?>
     <?php foreach($billetData as $billet) : ?>
-        Click
-        <a href='<?php echo $billet['url']; ?>' target='_blank' />here</a>
-        to show your billet for <strong><?php echo $billet['value']; ?></strong> payment.<br />
+        <?php echo sprintf(
+            $this->__(
+                "Click <a href='%s'>here</a>" .
+                " to show your billet for <strong>%s</strong> payment."
+            ),
+            $billet['url'],
+            $billet['value']);
+        ?>
+      <br />
     <?php endforeach; ?>
 <?php endif; ?>
