--- a/app/design/frontend/base/default/template/paymentmodule/form/partial/boleto.phtml
+++ b/app/design/frontend/base/default/template/paymentmodule/form/partial/boleto.phtml
@@ -8,7 +8,7 @@
 ?>
 
 <div class="input-box">
-    <h6>Boleto <?php echo $elementIndex; ?></h6>
+    <h6><?php echo $this->__('Billet') . ' ' . $elementIndex; ?></h6>
     <?php if($showValueInput === true) : ?>
         <div class="input-box">
             <label>Value (Ex: 100.50)<span class="required">*</span></label><br/>
