--- a/app/design/frontend/base/default/template/paymentmodule/checkout/information.phtml
+++ b/app/design/frontend/base/default/template/paymentmodule/checkout/information.phtml
@@ -5,9 +5,10 @@
         <?php echo sprintf(
             $this->__(
                 "Click <a href='%s'>here</a>" .
-                " to show your billet for <strong>%s</strong> payment."
+                " to show your billet for <strong>%s %s</strong> payment."
             ),
             $billet['url'],
+            $this->getCurrentCurrencySymbol(),
             $billet['value']);
         ?>
       <br />
