:globe_with_meridians: checkout credit card translated

--- a/app/design/frontend/base/default/template/paymentmodule/form/partial/boleto.phtml
+++ b/app/design/frontend/base/default/template/paymentmodule/form/partial/boleto.phtml
@@ -11,7 +11,7 @@
     <h6><?php echo $this->__('Billet') . ' ' . $elementIndex; ?></h6>
     <?php if($showValueInput === true) : ?>
         <div class="input-box">
-            <label><?php echo $this->__('Value'); ?> (Ex: 100.50)<span class="required">*</span></label><br/>
+            <label><?php echo $this->__('Value'); ?> (Ex: 100.50)<span class="required"></span></label><br/>
             <input
                     type="number"
                     step=".01"
