--- a/app/design/frontend/base/default/template/paymentmodule/checkout/information.phtml
+++ b/app/design/frontend/base/default/template/paymentmodule/checkout/information.phtml
@@ -2,14 +2,16 @@
 <br />
 <?php if(!empty($billetData)) : ?>
     <?php foreach($billetData as $billet) : ?>
-        <?php echo sprintf(
-            $this->__(
-                "Click <a href='%s'>here</a>" .
-                " to show your billet for <strong>%s %s</strong> payment."
-            ),
-            $billet['url'],
-            $this->getCurrentCurrencySymbol(),
-            $billet['value']);
+        <?php
+            echo sprintf(
+                $this->__(
+                    "Click <a href='%s'>here</a>" .
+                    " to show your billet for <strong>%s %s</strong> payment."
+                ),
+                $billet['url'],
+                $this->getCurrentCurrencySymbol(),
+                $billet['value']
+            );
         ?>
       <br />
     <?php endforeach; ?>
