:sparkles: Add multi buyer to boleto form.

--- a/app/design/frontend/base/default/template/paymentmodule/form/partial/creditcard.phtml
+++ b/app/design/frontend/base/default/template/paymentmodule/form/partial/creditcard.phtml
@@ -222,6 +222,9 @@
             name="payment[<?php echo "$elementId"?>_token]">
 
     <br>
+
+    <!-- Multi buyer -->
+
     <div class="input-box">
 
         <input
@@ -334,7 +337,6 @@
                 class="required-entry"
                 value="">
     </div>
-
 
 </div>
 <p>
