--- a/app/design/frontend/base/default/template/paymentmodule/form/partial/creditcard.phtml
+++ b/app/design/frontend/base/default/template/paymentmodule/form/partial/creditcard.phtml
@@ -46,7 +46,7 @@
                     name="payment[<?php echo "$elementId"?>_value]"
                     title="<?php echo $this->__('Value'); ?> (Ex: 100,50)"
                     class="required-entry multipayment-value-input"
-                    onchange="getBrand('<?php echo $elementId?>');"
+                    onchange="getBrandWithDelay('<?php echo $elementId?>');"
                     value="">
         </div>
         <br>
