:bug: fixed boleto + card payment

--- a/app/design/frontend/base/default/template/paymentmodule/form/partial/multibuyer.phtml
+++ b/app/design/frontend/base/default/template/paymentmodule/form/partial/multibuyer.phtml
@@ -1,6 +1,6 @@
 <?php
     $_code = $this->getCode();
-    $elementIndex = $this->getElementIndex();
+    $elementIndex = $this->getParentIndex();
     $elementId = $_code . "_".$this->getParentElement() ."_". $elementIndex;
 ?>
 
