--- a/app/design/frontend/base/default/template/paymentmodule/form/builder.phtml
+++ b/app/design/frontend/base/default/template/paymentmodule/form/builder.phtml
@@ -22,7 +22,7 @@ $orderTotal = $this->getGrandTotal();
     </ul>
     <script type="text/javascript">
         jQuery(document).ready(function(){
-            initPaymentMethod('<?php echo $_code; ?>','<?php echo $orderTotal; ?>');
+            MundiPagg.initPaymentMethod('<?php echo $_code; ?>','<?php echo $orderTotal; ?>');
         });
     </script>
 </fieldset>
