:construction: OneStepCheckou checkout handling segregated to class

--- a/app/design/frontend/base/default/template/paymentmodule/form/partial/creditcard.phtml
+++ b/app/design/frontend/base/default/template/paymentmodule/form/partial/creditcard.phtml
@@ -111,7 +111,7 @@
         <div
                 id="<?php echo "$elementId"?>_disabled_brand_message"
                 style="display: none;"
-                class="disabledBrandMessae validation-advice"
+                class="disabledBrandMessage validation-advice"
         ><?php echo $this->__('Unavailable brand'); ?></div>
     </div>
 
